--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,25 +1,113 @@
+.containerLandingpage{
+    width:100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    overflow: hidden;
+    color: hotpink;
+}
 .welcomephoto{
     background-image: url('/src/images/welcometofw.jpg') ;
     background-size: contain;
-    margin-left: auto;
-    margin-right: auto;
-    height: 600px;
-    width: 1000px;
+    width: 700px;
+    height: 400px;
     background-repeat: no-repeat;
 }
 .startphoto{
     background-image: url('/src/images/start.jpg');
     background-size: contain;
-    margin-left: auto;
-    margin-right: auto;
-    height: 400px;
-    width: 500px;
+    height: 300px;
+    width: 300px;
     background-repeat: no-repeat;
 }
+.containerChoosePlayer, .playGame{
+    background-color: yellow;
+    width:100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    overflow:visible;
+    color: hotpink;
+}
+
 .welcometofwphoto{
     background-image: url('/src/images/welcometofw.jpg');
     background-size: contain;
     height: 200px;
     width: 380px;
+    background-repeat: no-repeat;
+}
+
+.dropdownMenu{
+    position: relative;
+    display: inline-block;
+    padding-left: 8%;
+    background-color: blue;
+}
+
+.dropdownButton{
+    background-color: hotpink;
+    color: white;
+    padding: 12px;
+    font-size: 16px;
+    border: none;
+}
+.dropdown-content{
+    display: none;
+    position:absolute;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px green;
+    z-index: 1;
+}
+.dropdown-content button{
+    background-color: hotpink;
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    width: 100%;
+}
+.dropdown-content button:hover{
+    background-color: green;
+}
+.dropdownMenu:hover .dropdown-content{
+    display: block;
+}
+.dropdownMenu:hover .dropdownButton{
+    background-color: #3e8e41;
+}
+
+.playerStats{
+    display: flex;
+    width: 100%;
+    background-color: burlywood;
+    font-size: 16px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: white;
+}
+.player1{
+    width: 40%;
+    float: left;
+    margin: 4%;
+    margin-bottom: 0;
+    padding: 20px;
+    background-color: #3e8e41;
+}
+.player2{
+    width: 40%;
+    margin: 4%;
+    margin-bottom: 0;
+    padding: 20px;
+    background-color: blueviolet;
+    
+}
+.startGameButton{
+    background-image: url('/src/images/start.jpg');
+    background-size: contain;
+    height: 115px;
+    width: 200px;
     background-repeat: no-repeat;
 }
