gaming functionality and css

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,7 +22,6 @@
     background-repeat: no-repeat;
 }
 .containerChoosePlayer, .playGame{
-    background-color: yellow;
     width:100%;
     display: flex;
     align-items: center;
@@ -44,7 +43,6 @@
     position: relative;
     display: inline-block;
     padding-left: 8%;
-    background-color: blue;
 }
 
 .dropdownButton{
@@ -83,10 +81,10 @@
 .playerStats{
     display: flex;
     width: 100%;
-    background-color: burlywood;
     font-size: 16px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: white;
+    padding:10px
 }
 .player1{
     width: 40%;
@@ -94,20 +92,86 @@
     margin: 4%;
     margin-bottom: 0;
     padding: 20px;
-    background-color: #3e8e41;
+    border-color: hotpink;
+    box-shadow: 0px 8px 16px 0px green;
+    padding: 5px;
 }
 .player2{
     width: 40%;
     margin: 4%;
     margin-bottom: 0;
     padding: 20px;
-    background-color: blueviolet;
-    
+    border-color: hotpink;
+    box-shadow: 0px 8px 16px 0px green;
+    padding: 5px;
 }
-.startGameButton{
+
+
+#idd{
+    display: none;
+    text-align: left;
+    padding-left: 15px;
+
+}
+#showspicy{
+    display: none;
+    text-emphasis: bold;
+    width: 80%;
+    border-style: solid;
+    border-width: 1px;
+    border-color: hotpink;
+    text-align: center;
+    box-shadow: 0px 8px 16px 0px green;
+    padding: 5px;
+}
+#showdeath{
+    display: none;
+    text-emphasis: bold;
+    border-style: solid;
+    border-width: 1px;
+    border-color: hotpink;
+    text-align: center;
+    box-shadow: 0px 8px 16px 0px green;
+    padding: 20px;
+}
+.wholething{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 16px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: white;
+}
+.playerIntroduction, .gameDiv{
+    width: 70%;
+    margin: 1%;
+    margin-bottom: 0;
+    padding: 15px;
+}
+#showgame{
+    display: block;
     background-image: url('/src/images/start.jpg');
+    background-size: contain;
+    height: 120px;
+    width: 210px;
+    background-repeat: no-repeat;
+}
+#resetButton{    
+    background-image: url('/src/images/playagain.jpg');
     background-size: contain;
     height: 115px;
     width: 200px;
     background-repeat: no-repeat;
+    display: none;
+
+}
+.resetDiv{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+ul{
+    list-style: none;
 }
