--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -93,6 +93,7 @@
     margin-bottom: 0;
     padding: 20px;
     border-color: hotpink;
+    border-style: solid;
     box-shadow: 0px 8px 16px 0px green;
     padding: 5px;
 }
@@ -102,6 +103,7 @@
     margin-bottom: 0;
     padding: 20px;
     border-color: hotpink;
+    border-style: solid;
     box-shadow: 0px 8px 16px 0px green;
     padding: 5px;
 }
